/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package org.apache.airavata.api.execution;

import "execution/experiment_stub.proto";
import "auth/auth_stubs.proto";

message ExperimentRegisterRequest {
  org.apache.airavata.api.auth.stubs.AuthzToken authz_token = 1;
  org.apache.airavata.api.execution.stubs.Experiment experiment = 2;
}

message ExperimentRegisterResponse {
  string experiment_id = 1;
}

message ExperimentLaunchRequest {
  org.apache.airavata.api.auth.stubs.AuthzToken authz_token = 1;
  string experiment_id = 2;
}

message ExperimentLaunchResponse {
  bool status = 1;
}

message ExperimentUpdateRequest {
  org.apache.airavata.api.auth.stubs.AuthzToken authz_token = 1;
  org.apache.airavata.api.execution.stubs.Experiment experiment = 2;
}
message ExperimentUpdateResponse {
}

service ExecutionService {
  rpc registerExperiment(ExperimentRegisterRequest) returns (ExperimentRegisterResponse);
  rpc launchExperiment(ExperimentLaunchRequest) returns (ExperimentLaunchResponse);
  rpc updateExperiment(ExperimentUpdateRequest) returns (ExperimentUpdateResponse);
}
